--- a/api/product/models/product.settings.json
+++ b/api/product/models/product.settings.json
@@ -31,7 +31,7 @@
       "collection": "category"
     },
     "cover": {
-      "collection": "file",
+      "model": "file",
       "via": "related",
       "allowedTypes": [
         "images",
